# char-literal-utf8

./: README.md  pyproject.toml
src/char_literal_utf8/: __init__.py
